# rostrace

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  Usage.md  package.xml  pyproject.toml  rostrace-docker  setup.py
.github/workflows/: lint.yml
demo/: Dockerfile  docker-compose.processing.yml  docker-compose.queuing.yml
example/queuing_latency/: CMakeLists.txt  README.md  package.xml  start_cpu_stress.sh  stop_cpu_stress.sh
example/queuing_latency/src/: listener.cpp  talker.cpp
example/scenarios/: CMakeLists.txt  package.xml
example/scenarios/scripts/: load_driver.py
example/scenarios/src/: processing_delay_node.cpp  service_blocker_node.cpp
scripts/: rostrace
src/rostrace/: main.py  runner.py
src/rostrace/bpf/: topics.bt
tests/: test_runner.py
