<?xml version="1.0"?>
<package format="2">
  <name>rostrace</name>
  <version>0.1.0</version>
  <description>
    A zero-instrumentation, kernel-level observability suite for debugging
    non-deterministic latency in distributed robotic systems using eBPF.
  </description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>bpftrace</exec_depend>
  <!-- We might need roscpp/rospy if we interact with ROS directly,
       but for now focusing on the observability part -->

  <export>
  </export>
</package>
