<?xml version="1.0"?>
<package format="2">
  <name>queuing_latency_example</name>
  <version>0.0.0</version>
  <description>An example package to demonstrate rosbpf diagnosing queuing latency.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
